--- a/wjon.css
+++ b/wjon.css
@@ -3,8 +3,13 @@ p {
 }
 .header-container{
 	display: block;
-	background-color: green;
+	background-color: #42AF63;
+	color: #ffffff;
+	font-family: sans-serif;
+	padding: 0;
+	margin: 0;
 }
-.name-container{
-	font-color: white;
+#name{
+	padding: 0;
+	margin: 0;
 }
