Styled body text as grey, created IDs for text fields, aligned accordingly

--- a/wjon.css
+++ b/wjon.css
@@ -3,8 +3,35 @@ p {
 }
 .header-container{
 	display: block;
-	background-color: green;
+	background-color: #42AF63;
 }
 .name-container{
 	font-color: white;
+}
+
+.interrogative {
+	background-color: #42AF63;
+	display: block;
+}
+
+h3 {
+	font-family: sans-serif;
+}
+
+#maintext {
+	display: inline-block;
+	width: 70%;
+	border: 5px solid black;
+	padding: 5px;
+
+}
+
+#sidebar {
+	display: inline-block;
+	float: right;
+	width: 25%;
+}
+
+.greytext {
+	color: #646262;
 }
