--- a/wjon.css
+++ b/wjon.css
@@ -43,6 +43,7 @@ p {
 	background-color: #42AF63;
 	display: block;
 	position: fixed;
+	bottom: 0;
 	text-align: center;
 	color: white;
 	width: 100%;
