--- a/wjon.css
+++ b/wjon.css
@@ -30,15 +30,12 @@ p {
 	display: inline-block;
 
 }
-#donate-button{
+.donate-button{
 	display:inline-block;
 	margin: 5px 5px 0px 0px;
 	float:right;
 	padding: 20px;
 	border: 5px solid #FFFFFF;
-	position: fixed;
-	top: 5px;
-	right: 5px;
 	background-color: #42AF63;
 }
 
@@ -124,10 +121,15 @@ h4 span {
 	display: inline-block;
 
 }
+#sidebar-button{
+	width: 70%;
+	margin: 50px auto;
+	display: block;
+	float: none;
+	text-align: center;
+}
 
 
 img {
 width: 100%;
 }
-Contact GitHub API Training Shop Blog About
-© 2016 GitHub, Inc. Terms Privacy Security Status Help
